--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -1,11 +1,13 @@
 <{extends file="layout.html"}>
 <{block name="myStyles"}>
 <style type="text/css">
+    /*设置图标样式*/
     .aw-content-wrap .icon {
         background-color: #393D49;
         margin-right: 10px;
     }
 
+    /*设置表头部文字居中j加粗*/
     .layui-table thead th{
         text-align: center;
         font-weight: bold;
@@ -33,7 +35,6 @@
         position: relative;
     }
 
-
     .layui-field-title{
         width: 800px;
     }
@@ -47,7 +48,7 @@
     }
 
     .layui-input-inline .layui-btn {
-        color: #e6e6e6
+        color: #cdcdcd
     }
 
     .icons-box {
@@ -69,7 +70,7 @@
         height: 20px;
         float: left;
         cursor: pointer;
-        color: #e6e6e6;
+        color: #cdcdcd;
         margin: 5px;
     }
 
@@ -138,6 +139,23 @@
         background-color: transparent;
     }
 
+    .logo-input {
+        width: 60px;
+        display: inline-block;
+    }
+
+    .logo-btn {
+        background-color: #393D49;
+    }
+
+    .logo-img {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        left: 20px;
+        top: 10px;
+    }
+
 </style>
 <{/block}>
 <{block name="scriptCode"}>
@@ -158,7 +176,14 @@
     var isEdit = false;
     // 修改平台id
     var editAccountId = "";
-
+    // 默认的logo
+    var defaultLogo = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsSAAALEgHS3X78AAAC iElEQVQ4EaVTzU8TURCf2tJuS7tQtlRb6UKBIkQwkRRSEzkQgyEc6lkOKgcOph78Y+CgjXjDs2i4 4FXY9AMTlQRUELZapVlouy3d7kKtb0Zr0MSLTvL2zb75eL838xtTvV6H/xELBptMJojeXLCXyobn yog4YhzXYvmCFi6qVSfaeRdXdrfaU1areV5KykmX06rcvzumjY/1ggkR3Jh+bNf1mr8v1D5bLuvR 3qDgFbvbBJYIrE1mCIoCrKxsHuzK+Rzvsi29+6DEbTZz9unijEYI8ObBgXOzlcrx9OAlXyDYKUCz wwrDQx1wVDGg089Dt+gR3mxmhcUnaWeoxwMbm/vzDFzmDEKMMNhquRqduT1KwXiGt0vre6iSeAUH NDE0d26NBtAXY9BACQyjFusKuL2Ry+IPb/Y9ZglwuVscdHaknUChqLF/O4jn3V5dP4mhgRJgwSYm +gV0Oi3XrvYB30yvhGa7BS70eGFHPoTJyQHhMK+F0ZesRVVznvXw5Ixv7/C10moEo6OZXbWvlFAF 9FVZDOqEABUMRIkMd8GnLwVWg9/RkJF9sA4oDfYQAuzzjqzwvnaRUFxn/X2ZlmGLXAE7AL52B4xH gqAUqrC1nSNuoJkQtLkdqReszz/9aRvq90NOKdOS1nch8TpL555WDp49f3uAMXhACRjD5j4ykuCt f5PP7Fm1b0DIsl/VHGezzP1KwOiZQobFF9YyjSRYQETRENSlVzI8iK9mWlzckpSSCQHVALmN9Az1 euDho9Xo8vKGd2rqooA8yBcrwHgCqYR0kMkWci08t/R+W4ljDCanWTg9TJGwGNaNk3vYZ7VUdeKs YJGFNkfSzjXNrSX20s4/h6kB81/271ghG17l+rPTAAAAAElFTkSuQmCC";
+    // 账号logo
+    var addLogo = defaultLogo;
+    // 筛选选中的catid
+    var selectCatId = "";
+    // 筛选选中的platid
+    var selectPlatformId = "";
     $(document).ready(function () {
         // 设置边栏服务器信息选中状态
         $("#account_manager").addClass("active");
@@ -182,6 +207,7 @@
         var loginAddressInput = $("#login_address");
         loginAddressInput.bind("input propertychange", function (event) {
             addAddress = loginAddressInput.val();
+            setLogoBtn();
         });
         // 监听输入登录地址
         var remarkInput = $("#acc_remark");
@@ -189,44 +215,134 @@
             addRemark = remarkInput.val();
         });
 
-        // 监听平台选择
+        // 监听select选择变化
         layui.use('form',function () {
             var form = layui.form;
+
+            // 监听平台选择
             form.on('select(plat-list)', function(data){
                 // 选择的platid
                 var platId = data.value;
                 selectedPlatId = platId;
             });
-        });
 
-        // 监听密码选择
-        layui.use('form',function () {
-            var form = layui.form;
+            // 监听密码选择
             form.on('select(pass-list)', function(data){
                 // 选择的密码
                 var pass = data.value;
                 $("#add_pass").val(pass);
                 addPassWd = pass;
             });
+
+            // 监听筛选分类选择
+            form.on('select(cat-filter)', function(data){
+                // 选择的catid
+                var catId = data.value;
+                if (catId.length > 0){
+                    selectCatId = catId;
+                    // 请求该分类下的平台列表
+                    loadPlatformList();
+                }
+            });
+
+            // 监听筛选平台选择
+            form.on('select(platform-filter)', function(data){
+                // 选择的platid
+                var selectPlatId = data.value;
+                if (selectPlatId.length > 0){
+                    selectPlatformId = selectPlatId;
+                    // 刷新账号列表
+                    reloadAccountList();
+                }
+            });
         });
 
+        // 获取筛选分类列表
+        loadCatgoryList();
         // 请求账号列表
         loadAccountList();
     });
+    
+    // 获取筛选分类列表
+    function loadCatgoryList() {
+        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategotyList&API=";
+        get(url,function (data) {
+            // 创建筛选分类列表
+            var dom = '<option value="">请选择分类</option>';
+            var catList = data.data;
+            for (var i = 0; i < catList.length; i++){
+                var catData = catList[i];
+                var catId = catData["id"];
+                var catName = catData["cat_title"];
+                dom += '<option value="'+ catId +'">'+ catName +'</option>';
+            }
+            $("#cat_select").html(dom);
+        },false);
+    }
+    
+    // 获取指定分类下的平台列表
+    function loadPlatformList() {
+        var url = baseUrl + "?m=home&c=API_Common&a=loadHomeAccountLists&API=&id=" + selectCatId;
+        get(url,function (data) {
+            // 创建筛选平台列表
+            var dom = '<option value="">请选择平台</option>';
+            var platList = data.data["platform_list"];
+            selectPlatformList = platList;
+            for (var i = 0; i < platList.length; i++){
+                var platData = platList[i];
+                var platId = platData["id"];
+                var platName = platData["plat_name"];
+                dom += '<option value="'+ platId +'">'+ platName +'</option>';
+            }
+
+            // 重新渲染layui form
+            layui.use('form',function () {
+                var form = layui.form;
+                $("#platform_select").html(dom);
+                form.render();
+            });
+        },false);
+    }
 
     // 获取账号列表
     function loadAccountList() {
-        var url = baseUrl + "?m=admin&c=API_Account&a=loadAccountList";
-        console.log("获取账户列表:" + url);
+        if (selectPlatformId.length > 0){
+            reloadAccountList();
+        }else {
+            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccountList&API=";
+            console.log("获取账户列表:" + url);
+            get(url,function (data) {
+                // 创建分类列表
+                createAccountDom(data.data);
+            },false);
+        }
+    }
+    
+    // 刷新账号列表
+    function reloadAccountList() {
+        var url = baseUrl + "?m=home&c=API_Common&a=loadHomeAccountLists&API=&id=" + selectCatId;
         get(url,function (data) {
-            // 创建分类列表
-            createAccountDom(data.data);
-        },false);
+            // 平台列表
+            var platList = data.data["platform_list"];
+            // 请求该平台下的账号列表
+            var accountData = [];
+            for (var i = 0; i < platList.length; i++){
+                var platData = platList[i];
+                var platId = platData["id"];
+                if (selectPlatformId == platId){
+                    accountData = platData["acc_list"];
+                    break;
+                }
+            }
+
+            // 刷新账号列表
+            createAccountDom(accountData);
+        });
     }
 
     // 请求平台列表
     function loadPlatList() {
-        var url = baseUrl + "?m=admin&c=API_Platform&a=loadPlatformList";
+        var url = baseUrl + "?m=admin&c=API_Platform&a=loadPlatformList&API=";
         get(url, function (data) {
             layui.use('form', function(){
                 var form = layui.form;
@@ -240,15 +356,16 @@
                 $("#plat_select").html(dom);
                 $("#plat_select").val(selectedPlatId);
                 form.render();
+
                 // 显示添加界面
                 showEditCatCover();
             });
         })
     }
 
-    // 请求密码列表 返回机密以后的密码
+    // 请求密码列表
     function loadPassList(success) {
-        var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPassList";
+        var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPassList&API=";
         console.log("请求密码列表:" + url);
         get(url, function (data) {
             layui.use('form', function(){
@@ -281,6 +398,7 @@
         addPassWd = "";
         addAddress = "";
         addRemark = "";
+        addLogo = "";
         // 请求密码列表
         loadPassList(function () {
             // 请求平台列表
@@ -304,8 +422,6 @@
             dom += '<i title="复制" onclick="copyAccount(this)" accId="'+ account["id"] +'" style="cursor: pointer" class="icon icon-reply"></i>';
             dom += '<i title="删除" platId="'+ account["plat_id"] +'" accId="'+ account["id"] +'" onclick="deleteAccount(this)" style="cursor: pointer" class="icon icon-trash"></i></td></tr>';
         }
-
-        // 添加分类一行
         $("tbody").html(dom);
     }
 
@@ -318,7 +434,7 @@
         if (input.attr("type") == "text"){
             // 隐藏密码
             // 请求指定账号数据
-            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId;
+            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId + "&API=";
             get(url,function (data) {
                 var accData = data.data;
                 input.attr("type","password");
@@ -373,8 +489,15 @@
             return;
         }
 
+        // logo
+        if (addLogo.length == 0){
+            // 获取logo
+            loadLogo();
+        }
+
         // 用户名和登录地址要base64编码处理 防止特殊字符出错
-        addUserName = btoa(addUserName);
+        // 用户名要先进行uri编码处理中文内容,因为btoa直接编码中文h会报错
+        addUserName = btoa(encodeURIComponent(addUserName));
         addAddress = btoa(addAddress);
 
         // 密码加密
@@ -386,7 +509,7 @@
         var url = "";
         if (isEdit){
             // 修改
-            url = baseUrl + "?m=admin&c=API_Account&a=editAccount"
+            url = baseUrl + "?m=admin&c=API_Account&a=editAccount&API="
                 + "&id=" + editAccountId
                 + "&platId=" + selectedPlatId
                 + "&desc=" + addDesc
@@ -396,7 +519,7 @@
                 + "&remark=" + addRemark;
         }else {
             // 添加
-            url = baseUrl + "?m=admin&c=API_Account&a=addAccount"
+            url = baseUrl + "?m=admin&c=API_Account&a=addAccount&API="
                 + "&platId=" + selectedPlatId
                 + "&desc=" + addDesc
                 + "&user=" + addUserName
@@ -421,15 +544,17 @@
 
     // 删除账号
     function deleteAccount(obj) {
-        var $this = $(obj);
-        var accId = $this.attr("accId");
-        var platId = $this.attr("platId");
-        var url = baseUrl + "?m=admin&c=API_Account&a=deleteAccount&id=" + accId + "&platId=" + platId;
-        console.log("删除：" + url);
-        get(url,function () {
-            // 刷新列表
-            loadAccountList();
-        },true,true);
+        confirmAlert(function () {
+            var $this = $(obj);
+            var accId = $this.attr("accId");
+            var platId = $this.attr("platId");
+            var url = baseUrl + "?m=admin&c=API_Account&a=deleteAccount&id=" + accId + "&platId=" + platId + "&API=";
+            console.log("删除：" + url);
+            get(url,function () {
+                // 刷新列表
+                loadAccountList();
+            },true,true);
+        });
     }
     
     // 编辑账号
@@ -442,13 +567,14 @@
         // 加载密码列表
         loadPassList(function () {
             // 请求指定账号数据
-            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId;
+            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId + "&API=";
             get(url,function (data) {
                 var accData = data.data;
                 selectedPlatId = accData["plat_id"];
                 addDesc = accData["acc_desc"];
                 addUserName = accData["user"];
                 addPassWd = accData["passwd"];
+                addLogo = accData["logo"];
                 // 解密
                 addPassWd = RSADecryptPass(addPassWd);
                 addAddress = accData["address"];
@@ -458,6 +584,30 @@
                 loadPlatList();
             });
         });
+    }
+
+    // 设置logo
+    function setLogo() {
+        $("#logo_img").attr("src",addLogo);
+        var $logoBtn = $("#logo_btn");
+        if (addLogo.length > 0){
+            $logoBtn.text("更新");
+        }else {
+            $logoBtn.text("获取");
+        }
+        setLogoBtn();
+    }
+
+    // 设置获取logo按钮状态
+    function setLogoBtn() {
+        var $logoBtn = $("#logo_btn");
+        if (addAddress.length > 0){
+            $logoBtn.removeClass("layui-btn-disabled");
+            $logoBtn.addClass("logo-btn");
+        }else {
+            $logoBtn.addClass("layui-btn-disabled");
+            $logoBtn.removeClass("logo-btn");
+        }
     }
 
     // 复制一个账号
@@ -470,13 +620,14 @@
         // 加载密码列表
         loadPassList(function () {
             // 请求指定账号数据
-            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId;
+            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId + "&API=";
             get(url,function (data) {
                 var accData = data.data;
                 selectedPlatId = accData["plat_id"];
                 addDesc = accData["acc_desc"];
                 addUserName = accData["user"];
                 addPassWd = accData["passwd"];
+                addLogo = accData["logo"];
                 // 解密
                 addPassWd = RSADecryptPass(addPassWd);
                 addAddress = accData["address"];
@@ -487,9 +638,33 @@
             });
         });
     }
+    
+    // 获取/更新logo
+    function loadLogo() {
+        var add = btoa(addAddress);
+        var accId = editAccountId.length > 0 ? editAccountId : "";
+        var url = baseUrl + "?m=admin&c=API_Account&a=loadLogo&address=" + add + "&API=&accId=" + accId;
+        console.log("获取logo:" + url);
+        get(url,function (data) {
+            var res = data.data;
+
+            if (res == '无法获取logo'){
+                toast(res);
+            }else {
+                toast("获取logo成功");
+                addLogo = res;
+                setLogo();
+            }
+        },true,false,5000);
+    }
 
     // 显示添加/修改平台浮层
     function showEditCatCover() {
+        if (isEdit){
+            $("#legend_title").text("修改账号");
+        }else {
+            $("#legend_title").text("添加账号");
+        }
         $(".add-category-box").css("display","block");
         // 描述
         $("#add_user_desc").val(addDesc);
@@ -501,6 +676,8 @@
         $("#login_address").val(addAddress);
         // 备注
         $("#acc_remark").val(addRemark);
+        // logo
+        setLogo();
     }
 
     // 隐藏添加/修改分类浮层
@@ -513,6 +690,21 @@
 <{block name="content"}>
 <div class="aw-content-wrap">
     <div class="mod">
+        <form class="layui-form layui-form-pane" action="">
+            <div class="layui-form-item">
+                <label class="layui-form-label">筛选</label>
+                <div class="layui-input-inline">
+                    <select id="cat_select" lay-filter="cat-filter">
+                        <option value="">请选择分类</option>
+                    </select>
+                </div>
+                <div class="layui-input-inline">
+                    <select id="platform_select" lay-filter="platform-filter">
+                        <option value="">请选择平台</option>
+                    </select>
+                </div>
+            </div>
+        </form>
         <div class="layui-form" style="text-align: center;">
             <table id="acc_table" class="layui-table">
                 <colgroup>
@@ -546,7 +738,7 @@
 <div class="add-category-box">
     <div class="add-category-container">
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>添加账号</legend>
+            <legend id="legend_title">添加账号</legend>
         </fieldset>
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-form-item">
@@ -583,6 +775,12 @@
                 <label class="layui-form-label">登录地址</label>
                 <div class="layui-input-inline login-address">
                     <input id="login_address" type="text" lay-verify="required" placeholder="请输入登录地址" autocomplete="off" class="layui-input">
+                </div>
+                <label class="layui-form-label">logo</label>
+                <div class="layui-input-inline">
+                    <input readonly="readonly" type="text" lay-verify="required" autocomplete="off" class="layui-input logo-input">
+                    <img src="" id="logo_img" class="logo-img">
+                    <button  onclick="loadLogo()" type="button" id="logo_btn" class="layui-btn logo-btn">获取</button>
                 </div>
             </div>
             <div class="layui-form-item">
