--- a/admin/view/category/index.html
+++ b/admin/view/category/index.html
@@ -47,7 +47,7 @@
     }
 
     .layui-input-inline .layui-btn {
-        color: #e6e6e6
+        color: #cdcdcd
     }
 
     .icons-box {
@@ -140,7 +140,7 @@
 
     // 获取分类列表
     function loadCategoryList() {
-        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategotyList";
+        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategotyList&API=";
         console.log("分类:" + url);
         get(url,function (data) {
             // 创建分类列表
@@ -164,7 +164,7 @@
                 $(".icons-box ul").html(dom);
                 form.render();
             });
-        })
+        },false)
     }
 
     // 添加分类
@@ -232,10 +232,10 @@
         var url = "";
         if (isEdit){
             // 修改
-            url = baseUrl + "?m=admin&c=API_Category&a=editCategory&icon=" + selectedIcon + "&catName=" + addCatName + "&id=" + editCatId;
+            url = baseUrl + "?m=admin&c=API_Category&a=editCategory&icon=" + selectedIcon + "&catName=" + addCatName + "&id=" + editCatId + "&API=";
         }else {
             // 添加
-            url = baseUrl + "?m=admin&c=API_Category&a=addCategory&icon=" + selectedIcon + "&catName=" + addCatName;
+            url = baseUrl + "?m=admin&c=API_Category&a=addCategory&icon=" + selectedIcon + "&catName=" + addCatName + "&API=";
         }
 
         get(url,function () {
@@ -253,13 +253,15 @@
 
     // 删除分类
     function deleteCat(obj) {
-        var $this = $(obj);
-        var catId = $this.attr("catId");
-        var url = baseUrl + "?m=admin&c=API_Category&a=deleteCategory&id=" + catId;
-        get(url,function () {
-            // 刷新列表
-            loadCategoryList();
-        },true,true);
+        confirmAlert(function () {
+            var $this = $(obj);
+            var catId = $this.attr("catId");
+            var url = baseUrl + "?m=admin&c=API_Category&a=deleteCategory&id=" + catId + "&API=";
+            get(url,function () {
+                // 刷新列表
+                loadCategoryList();
+            },true,true);
+        });
     }
     
     // 编辑分类
@@ -270,7 +272,7 @@
         editCatId = catId;
 
         // 请求指定分类数据
-        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategory&id=" + catId;
+        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategory&id=" + catId + "&API=";
         get(url,function (data) {
             var catData = data.data;
             selectedIcon = catData["cat_icon"];
@@ -281,6 +283,11 @@
     
     // 显示添加/修改分类浮层
     function showEditCatCover() {
+        if (isEdit){
+            $("#legend_title").text("修改分类");
+        }else {
+            $("#legend_title").text("添加分类");
+        }
         $(".add-category-box").css("display","block");
         selectIcon(selectedIcon);
 
@@ -324,7 +331,7 @@
 <div class="add-category-box">
     <div class="add-category-container">
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>添加分类</legend>
+            <legend id="legend_title">添加分类</legend>
         </fieldset>
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-form-item">
