--- a/admin/view/db/index.html
+++ b/admin/view/db/index.html
@@ -32,10 +32,43 @@
         color: #FFF;
     }
 
+    .notice-box {
+        width: 400px;
+        height: 44px;
+        line-height: 44px;
+        font-size: 14px;
+        font-weight: 300;
+        display: inline-block;
+        color: red;
+        overflow: hidden;
+        vertical-align: middle;
+    }
+
+    .notice-box span {
+        display: inline-block;
+        width: 100%;
+        height: 20px;
+        margin-top: 10px;
+    }
+
+    form {
+        margin-top: 20px;
+    }
+
+    .layui-form-select dl dd.layui-this {
+        background-color: #393D49;
+    }
+
+    .layui-form-select {
+        width: 140px;
+    }
+
 </style>
 <{/block}>
 <{block name="scriptCode"}>
 <script>
+    // 当前选择表
+    var selectedTableName = "";
     $(document).ready(function () {
         // 设置边栏服务器信息选中状态
         $("#db_manager").addClass("active");
@@ -52,20 +85,57 @@
             form.submit();
         });
 
+        // 监听select选择变化
+        layui.use('form',function () {
+            var form = layui.form;
+
+            // 监听选择数据表
+            form.on('select(table-data-filter)', function(data){
+                // 选择的表名
+                selectedTableName = data.value;
+                $("#tb_name_input").val(selectedTableName);
+
+                // 刷新备份历史列表
+                loadDbBackupLists();
+            });
+        });
+
+        // 请求数据表
+        loadTableList();
+
         // 获取备份历史文件
-        setTimeout(function () {
-            loadDbBackupLists();
-        }, 100);
+        loadDbBackupLists();
     });
 
+    // 请求数据表
+    function loadTableList() {
+        var url = baseUrl + "?m=admin&c=API_Database&a=loadTableList&API=";
+        get(url,function (data) {
+            // 创建备份历史列表
+            var tableLists = data.data;
+
+            layui.use('form',function () {
+                var form = layui.form;
+                var dom = '<option value="">请选择表</option>';
+                for (var i = 0; i < tableLists.length; i++){
+                    var tableData = tableLists[i];
+                    var tableName = tableData["tableName"];
+                    var tableComment = tableData["comment"];
+                    dom += '<option value="'+ tableName +'">'+ tableComment +'</option>';
+                }
+                $("#table_select").html(dom);
+                form.render();
+            });
+        },false);
+    }
 
     // 获取备份历史文件
     function loadDbBackupLists() {
-        var url = baseUrl + "?m=admin&c=API_Database&a=loadDbBackupHistory";
+        var url = baseUrl + "?m=admin&c=API_Database&a=loadDbBackupHistory&API=&tbName=" + selectedTableName;
         get(url,function (data) {
             // 创建备份历史列表
             createBackupListDom(data.data);
-        });
+        },false);
     }
 
     // 创建备份文件列表
@@ -89,7 +159,7 @@
     function deleteBackup(obj) {
         var $this = $(obj);
         var backName = $this.attr("backName");
-        var url = baseUrl + "?m=admin&c=API_Database&a=deleteBackup&fileName=" + backName;
+        var url = baseUrl + "?m=admin&c=API_Database&a=deleteBackup&fileName=" + backName + "&API=&tbName=" + selectedTableName;
         get(url,function () {
             // 刷新列表
             loadDbBackupLists();
@@ -98,19 +168,23 @@
 
     // 导入备份
     function importBackup(obj) {
-        var $this = $(obj);
-        var backName = $this.attr("backName");
+        // 确认提示
+        confirmAlert(function () {
+            var $this = $(obj);
+            var backName = $this.attr("backName");
 
-        // 请求指定分类数据
-        var url = baseUrl + "?m=admin&c=API_Database&a=importBackup&fileName=" + backName;
-        get(url,function () {
-            // 导入完成
-        })
+            // 请求指定分类数据
+            var url = baseUrl + "?m=admin&c=API_Database&a=importBackup&fileName=" + backName + "&API=&tbName=" + selectedTableName;
+            get(url,function () {
+                // 导入完成
+            },true,true);
+        },"确认导入吗？这将覆盖原有数据库数据");
     }
 
     // 备份数据库
     function backupDB() {
-        var url = baseUrl + "?m=admin&c=API_Database&a=backupDB";
+        var url = baseUrl + "?m=admin&c=API_Database&a=backupDB&API=&tbName=" + selectedTableName;
+        console.log("备份数据库:" + url);
         get(url,function () {
             // 备份完成 刷新备份历史列表
             loadDbBackupLists();
@@ -126,7 +200,8 @@
     function downloadBackup(obj) {
         var $this = $(obj);
         var backName = $this.attr("backName");
-        var url = baseUrl + "/admin/resource/dbBackup/" + backName;
+        var dirName = selectedTableName.length > 0 ? selectedTableName : "all";
+        var url = baseUrl + "/admin/resource/dbBackup/" + dirName + "/" + backName;
 
         var $eleForm = $("<form method='get'></form>");
         $eleForm.attr("action",url);
@@ -141,10 +216,23 @@
     <input id="msg_input" type="hidden" value="<{$data.msg}>">
     <button onclick="backupDB()" type="button" class="layui-btn layui-btn-primary layui-btn-lg">新增备份</button>
     <button onclick="uploadBackupDB()" type="button" class="layui-btn layui-btn-primary layui-btn-lg">上传文件</button>
+    <div class="notice-box">
+        <span id="notice_area" class="notice-area">警告:导入数据库会覆盖原有数据库数据，请谨慎操作</span>
+    </div>
+    <form class="layui-form layui-form-pane" action="">
+        <div class="layui-form-item">
+            <label class="layui-form-label">当前数据表</label>
+            <div class="layui-input-inline">
+                <select id="table_select" lay-filter="table-data-filter">
+                    <option value="">请选择表</option>
+                </select>
+            </div>
+        </div>
+    </form>
+
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;width: 100%">
         <legend>备份历史</legend>
     </fieldset>
-
     <div class="mod">
         <div class="layui-form" style="text-align: center;">
             <table class="layui-table">
@@ -163,6 +251,7 @@
     </div>
     <form id="upload_back_form" enctype="multipart/form-data" method="post" action="<{$data.baseUrl}>/admin/controller/UploadDBBack.php">
         <input type="file" name="file" id="file_select_input" style="display:none">
+        <input type="text" name="tbName" id="tb_name_input" style="display:none">
     </form>
 </div>
 <{/block}>
