--- a/admin/view/passwd/index.html
+++ b/admin/view/passwd/index.html
@@ -27,58 +27,14 @@
         width: 800px;
         height: 300px;
         background-color: #FFF;
-        margin: 100px auto;
+        margin: 200px auto;
         padding: 10px;
         border-radius: 2px;
         position: relative;
     }
 
-
-    .layui-field-title{
-        width: 800px;
-    }
-
     .layui-form-select dl dd.layui-this {
         background-color: #393D49;
-    }
-
-    .layui-form-item .cat-name {
-        width: 250px;
-    }
-
-    .layui-input-inline .layui-btn {
-        color: #e6e6e6
-    }
-
-    .icons-box {
-        width: 700px;
-        height: 100px;
-        overflow-x: hidden;
-        overflow-y: scroll;
-        margin-bottom: 10px;
-    }
-
-    .icons-box ul {
-        width: 700px;
-        height: 200px;
-        padding: 5px;
-    }
-
-    .icons-box ul li {
-        width: 20px;
-        height: 20px;
-        float: left;
-        cursor: pointer;
-        color: #e6e6e6;
-        margin: 5px;
-    }
-
-    .icons-box ul li:hover {
-        color: #393D49;
-    }
-
-    .icons-box ul li i {
-        font-size: 18px;
     }
 
     .btns-box {
@@ -181,7 +137,7 @@
 
     // 获取账号列表
     function loadPassList() {
-        var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPassList";
+        var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPassList&API=";
         get(url,function (data) {
             // 创建密码列表
             createPassDom(data.data);
@@ -243,7 +199,7 @@
         if (input.attr("type") == "text"){
             // 隐藏密码模式
             // 请求指定账号数据
-            var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPasswd&id=" + passId;
+            var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPasswd&id=" + passId + "&API=";
             get(url,function (data) {
                 var accData = data.data;
                 input.attr("type","password");
@@ -299,7 +255,7 @@
         var url = "";
         if (isEdit){
             // 修改
-            url = baseUrl + "/admin?c=API_PassManager&a=editPass"
+            url = baseUrl + "?m=admin&c=API_PassManager&a=editPass&API="
                 + "&id=" + editPassId
                 + "&level=" + passLevel
                 + "&desc=" + passDesc
@@ -307,7 +263,7 @@
             console.log("编辑:" + url);
         }else {
             // 添加
-            url = baseUrl + "/admin?c=API_PassManager&a=addPass"
+            url = baseUrl + "?m=admin&c=API_PassManager&a=addPass&API="
                 + "&desc=" + passDesc
                 + "&pass=" + passValue
                 + "&level=" + passLevel;
@@ -329,13 +285,15 @@
 
     // 删除密码
     function deletePass(obj) {
-        var $this = $(obj);
-        var passId = $this.attr("passId");
-        var url = baseUrl + "?m=admin&c=API_PassManager&a=deletePass&id=" + passId;
-        get(url,function () {
-            // 刷新列表
-            loadPassList();
-        },true,true);
+        confirmAlert(function () {
+            var $this = $(obj);
+            var passId = $this.attr("passId");
+            var url = baseUrl + "?m=admin&c=API_PassManager&a=deletePass&id=" + passId + "&API=";
+            get(url,function () {
+                // 刷新列表
+                loadPassList();
+            },true,true);
+        });
     }
     
     // 编辑密码
@@ -345,7 +303,7 @@
         var passId = $this.attr("passId");
 
         // 请求指定账号数据
-        var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPasswd&id=" + passId;
+        var url = baseUrl + "?m=admin&c=API_PassManager&a=loadPasswd&id=" + passId + "&API=";
         get(url,function (data) {
             var accData = data.data;
 
@@ -363,6 +321,11 @@
     
     // 显示添加/修改平台浮层
     function showEditCatCover() {
+        if (isEdit){
+            $("#legend_title").text("修改密码");
+        }else {
+            $("#legend_title").text("添加密码");
+        }
         $(".add-category-box").css("display","block");
 
         layui.use('form', function(){
@@ -420,7 +383,7 @@
 <div class="add-category-box">
     <div class="add-category-container">
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>添加密码</legend>
+            <legend id="legend_title">添加密码</legend>
         </fieldset>
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-form-item">
