--- a/admin/view/platform/index.html
+++ b/admin/view/platform/index.html
@@ -46,10 +46,6 @@
         width: 250px;
     }
 
-    .layui-input-inline .layui-btn {
-        color: #e6e6e6
-    }
-
     .icons-box {
         width: 700px;
         height: 100px;
@@ -62,23 +58,6 @@
         width: 700px;
         height: 200px;
         padding: 5px;
-    }
-
-    .icons-box ul li {
-        width: 20px;
-        height: 20px;
-        float: left;
-        cursor: pointer;
-        color: #e6e6e6;
-        margin: 5px;
-    }
-
-    .icons-box ul li:hover {
-        color: #393D49;
-    }
-
-    .icons-box ul li i {
-        font-size: 18px;
     }
 
     .btns-box {
@@ -149,7 +128,7 @@
 
     // 获取平台列表
     function loadPlatformList() {
-        var url = baseUrl + "?m=admin&c=API_Platform&a=loadPlatformList";
+        var url = baseUrl + "?m=admin&c=API_Platform&a=loadPlatformList&API=";
         get(url,function (data) {
             // 创建分类列表
             createPlatformDom(data.data);
@@ -158,7 +137,7 @@
 
     // 请求分类列表
     function loadCatList() {
-        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategotyList";
+        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategotyList&API=";
         get(url, function (data) {
             layui.use('form', function(){
                 var form = layui.form;
@@ -223,10 +202,10 @@
         var url = "";
         if (isEdit){
             // 修改
-            url = baseUrl + "?m=admin&c=API_Platform&a=editPlatform&id=" + editPlatId + "&catId=" + selectedCatId + "&platName=" + addPlatformName;
+            url = baseUrl + "?m=admin&c=API_Platform&a=editPlatform&id=" + editPlatId + "&catId=" + selectedCatId + "&platName=" + addPlatformName + "&API=";
         }else {
             // 添加
-            url = baseUrl + "?m=admin&c=API_Platform&a=addPlatform&catId=" + selectedCatId + "&platName=" + addPlatformName;
+            url = baseUrl + "?m=admin&c=API_Platform&a=addPlatform&catId=" + selectedCatId + "&platName=" + addPlatformName + "&API=";
         }
 
         get(url,function () {
@@ -244,14 +223,16 @@
 
     // 删除平台
     function deletePlatform(obj) {
-        var $this = $(obj);
-        var platId = $this.attr("platId");
-        var catId = $this.attr("catId");
-        var url = baseUrl + "?m=admin&c=API_Platform&a=deletePlatform&id=" + platId + "&catId=" + catId;
-        get(url,function () {
-            // 刷新列表
-            loadPlatformList();
-        },true,true);
+        confirmAlert(function () {
+            var $this = $(obj);
+            var platId = $this.attr("platId");
+            var catId = $this.attr("catId");
+            var url = baseUrl + "?m=admin&c=API_Platform&a=deletePlatform&id=" + platId + "&catId=" + catId + "&API=";
+            get(url,function () {
+                // 刷新列表
+                loadPlatformList();
+            },true,true);
+        });
     }
     
     // 编辑平台
@@ -262,7 +243,7 @@
         editPlatId = platId;
 
         // 请求指定平台数据
-        var url = baseUrl + "?m=admin&c=API_Platform&a=loadPlatform&id=" + platId;
+        var url = baseUrl + "?m=admin&c=API_Platform&a=loadPlatform&id=" + platId + "&API=";
 
         get(url,function (data) {
             var platData = data.data;
@@ -275,6 +256,12 @@
     
     // 显示添加/修改平台浮层
     function showEditCatCover() {
+        if (isEdit){
+            $("#legend_title").text("修改平台");
+        }else {
+            $("#legend_title").text("添加平台");
+        }
+
         $(".add-category-box").css("display","block");
         // 默认设置的平台名称
         $("#add_plat_name").val(addPlatformName);
@@ -317,7 +304,7 @@
 <div class="add-category-box">
     <div class="add-category-container">
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>添加平台</legend>
+            <legend id="legend_title">添加平台</legend>
         </fieldset>
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-form-item">
