--- a/public/common/css/login.css
+++ b/public/common/css/login.css
@@ -1,17 +1,32 @@
-/* Wecenter 后台登陆界面 */
-/*body{background:#eff0f4;}*/
-/*body{background:url('../img/login_bg1.jpg') no-repeat #e9f0f4 !important;margin-bottom: -10px}*/
+/*登陆界面*/
 .aw-login .mod{width:350px;margin-top:70px;}
-.aw-login .mod h1 img{display:block;width:130px;height:80px;-webkit-animation:fadeInDown 1s .2s ease both;-moz-animation:fadeInDown 1s .2s ease both;margin:0 auto;}
-@-webkit-keyframes fadeInDown{0%{opacity: 0; -webkit-transform: translateY(-20px);} 100%{opacity: 1; -webkit-transform: translateY(0);}}
-@-moz-keyframes fadeInDown{0%{opacity: 0; -moz-transform: translateY(-20px);} 100%{opacity: 1; -moz-transform: translateY(0);}}
 .aw-login .mod form{margin-top:30px;border:1px solid #ddd;border-radius:4px;box-shadow:0 1px 3px rgba(0,0,0,0.1);padding:40px;background:#fff;}
 .aw-login .mod form button{margin-top:10px;width:100%;}
 .aw-login .mod .form-group{position:relative;}
 .aw-login .mod form input{padding-left:30px;}
-.aw-login .mod form label{color:#666;}
-.aw-login .mod form .icon{position:absolute;left:10px;top:34px;color:#d5d5d5;font-size:18px;}
-.aw-login .mod h2{margin-top:30px;font-size:14px;}
+.aw-login .mod form .icon{position:absolute;left:10px;top:34px;color:#cdcdcd;font-size:18px;}
+.aw-login .mod form .iconfont{position:absolute;right:10px;top:34px;color:#cdcdcd;font-size:18px;
+    cursor: pointer;}
 .aw-login img.verification{width:100px;height:34px;border:none;}
 
-@media only screen and (max-width: 320px){.aw-login .mod{margin-top: 40px; width: 310px;}}
+/*设置body大小和浏览器大小y一致*/
+html {
+    height: 100%;
+}
+body{
+    position: relative;
+    height: 100%;
+}
+/*隐藏垂直滚动条*/
+#cotent{
+    overflow-y: hidden;
+}
+/*背景图片*/
+.bg_img {
+    position:absolute;
+    left:0;
+    top:0;
+    z-index:-1;
+    width: 100%;
+    height: 100%;
+}
