--- a/home/view/layout.html
+++ b/home/view/layout.html
@@ -57,7 +57,7 @@
 </html>
 <script src="<{PUBLIC_PATH}>common/layui/layui.js" charset="utf-8"></script>
 <script src="<{PUBLIC_PATH}>common/js/jquery.2.js" type="text/javascript"></script>
-<script src="<{PUBLIC_PATH}>common/js/JSEncrypt.min.js" type="text/javascript" ></script>
+<script src="<{PUBLIC_PATH}>common/js/jsencrypt.min.js" type="text/javascript" ></script>
 <script src="<{PUBLIC_PATH}>common/js/RSAEncrypt.js" type="text/javascript" ></script>
 <script src="<{PUBLIC_PATH}>common/js/cookie.js" type="text/javascript" ></script>
 <script src="<{PUBLIC_PATH}>common/js/sidebar.js" type="text/javascript"></script>
