--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -35,7 +35,7 @@
                     <i class="icon icon-bar"></i>
                 </button>
             </div>
-            <div style="font-family: HUPOFont;font-size: 20px;color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家后台系统</div>
+            <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家后台系统</div>
         </div>
 
         <div class="mod-message">
