--- a/admin/view/iconDepository/index.html
+++ b/admin/view/iconDepository/index.html
@@ -4,6 +4,11 @@
     .layui-table {
         width: 220px;
         display: inline-block;
+        margin-bottom: 5px!important;
+    }
+
+    .layui-table, .layui-table-view {
+        margin: 5px 0;
     }
 
     .icon-container {
