--- a/home/view/layout.html
+++ b/home/view/layout.html
@@ -35,7 +35,7 @@
                     <i title="后台" style="cursor:pointer;" onclick="toAdmin()" class="iconfont icon-houtaituichufanhuichu"></i>
                 </button>
             </div>
-            <div style="font-family: HUPOFont;font-size: 20px;color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家</div>
+            <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家</div>
         </div>
 
         <ul class="mod-bar">
